Ajustes nos textos descritivos

--- a/face-recognition.ipynb
+++ b/face-recognition.ipynb
@@ -21,9 +21,9 @@
    "id": "dd3182f1-c0bf-4db0-8d41-bfe2358a847e",
    "metadata": {},
    "source": [
-    "Este experimento envolve o conceito de Visão Computacional. Para desenvolver o estudo vamos utilizar o dataset __[*Labeled Faces in the Wild* (LFW)](https://vis-www.cs.umass.edu/lfw/)__ e o código será baseado em um exemplo disponibilizado pelo __[scikit-learn](https://scikit-learn.org/stable/auto_examples/applications/plot_face_recognition.html)__ \n",
+    "Este experimento envolve o conceito de Visão Computacional. Para desenvolver o estudo vamos utilizar o dataset __[*Labeled Faces in the Wild* (LFW)](https://vis-www.cs.umass.edu/lfw/)__ e o código é baseado em um exemplo disponibilizado pelo __[scikit-learn](https://scikit-learn.org/stable/auto_examples/applications/plot_face_recognition.html)__.\n",
     "\n",
-    "O dataset LFW é um conjunto de fotografias de rostos projetado para o estudo do problema do reconhecimento de rostos. Para isso foram coletadas imagens de rostos na internet e cada foto foi posteriormente etiquetada (labeled) de forma a indicar qual a pessoa presente na imagem.\n",
+    "O dataset LFW é um conjunto de fotografias projetado para o estudo do problema do reconhecimento de rostos. Para isso foram coletadas imagens de rostos na internet e cada foto foi posteriormente etiquetada (labeled) de forma a indicar qual a pessoa presente na imagem.\n",
     "\n",
     "O dataset contém mais de **13.000 imagens**, sendo **1680 das pessoas retratadas têm duas ou mais fotos distintas** no conjunto de dados.\n",
     "\n",
@@ -72,7 +72,7 @@
    "id": "c65fe012-5b08-4f65-a66d-47bdd4cf0ea4",
    "metadata": {},
    "source": [
-    "***\n",
+    "<br>\n",
     "Então fazemos um levantamento das caracteristicas do dadaset estabelecido:<br>\n",
     "**n_samples**: número de imagens<br>\n",
     "**h**: altura das imagens redimensionadas<br>\n",
@@ -95,9 +95,8 @@
    "id": "323f8c85-ebe4-4120-907e-27add81283e9",
    "metadata": {},
    "source": [
-    "***\n",
-    "Como exemplos (X) são utilizados os dados de cada imagem. \n",
-    "O array *lfw_people.data* retorna array numpy em que cada linha corresponde a um conjunto de features que representam numéricamente os pontos de cada imagem (resolução original 62 x 47). Neste caso, como as imagens foram redimensionadas, o número para a resolução de 50 x 37, ou seja, 1850 features."
+    "<br>Como exemplos (X) são utilizados os dados de cada imagem. \n",
+    "O array ***lfw_people.data*** retorna array numpy em que cada linha corresponde a um conjunto de features que representam numéricamente os pontos de cada imagem (resolução original 62 x 47). Neste caso, como as imagens foram redimensionadas, o número para a resolução de 50 x 37, ou seja, 1850 features."
    ]
   },
   {
@@ -117,8 +116,7 @@
    "id": "9ce9b0b1-fb2a-4ef2-8b7b-4e206f78ba95",
    "metadata": {},
    "source": [
-    "***\n",
-    "A etiqueta (label) que será previsto (predicted) é o ID da pessoa. As classes já são disponibilizadas pelo scikit-learn com o array *lfw_people.target*"
+    "<br>A etiqueta (label) que será previsto (predicted) é o ID da pessoa. As classes já são disponibilizadas pelo scikit-learn com o array *lfw_people.target*"
    ]
   },
   {
@@ -233,7 +231,7 @@
    "metadata": {},
    "source": [
     "### PCA - Eigenfaces\n",
-    "Com base nos exemplos de treinamento o método não supervisionado __[pca.components_.reshape](https://scikit-learn.org/stable/modules/generated/sklearn.decomposition.PCA.html)__ extraí 150 atributos (dos até então 1850), que representam a extração de um padrão para identificar o espaço em que o rosto se encontra. Este processo gera um novo dataset com apenas 150 atributos, transformando os dados dos exemplos do conjunto X_train e X_test em X_train_pca e X_teste_pca, respectivamente."
+    "Com base nos exemplos de treinamento o método não supervisionado __[pca.components_.reshape](https://scikit-learn.org/stable/modules/generated/sklearn.decomposition.PCA.html)__ extraí 150 atributos (dos até então 1850), que representam a extração de um padrão para identificar o espaço em que o rosto se encontra. Este é um processo de redução de dimensionalidade, e gera um novo dataset com apenas 150 atributos, transformando os dados dos exemplos do conjunto X_train e X_test em X_train_pca e X_teste_pca, respectivamente."
    ]
   },
   {
