Ajustes nos textos descritivos

--- a/face-recognition.ipynb
+++ b/face-recognition.ipynb
@@ -23,14 +23,14 @@
    "source": [
     "Este experimento envolve o conceito de Visão Computacional. Para desenvolver o estudo vamos utilizar o dataset __[*Labeled Faces in the Wild* (LFW)](https://vis-www.cs.umass.edu/lfw/)__ e o código é baseado em um exemplo disponibilizado pelo __[scikit-learn](https://scikit-learn.org/stable/auto_examples/applications/plot_face_recognition.html)__.\n",
     "\n",
-    "O dataset LFW é um conjunto de fotografias projetado para o estudo do problema do reconhecimento de rostos. Para isso foram coletadas imagens de rostos na internet e cada foto foi posteriormente etiquetada (labeled) de forma a indicar qual a pessoa presente na imagem.\n",
+    "O dataset LFW é um conjunto de fotografias projetado para o estudo do problema do reconhecimento de rostos. Para isso foram coletadas imagens de rostos na internet e cada foto foi posteriormente etiquetada (labeled) de forma a indicar a pessoa presente na imagem.\n",
     "\n",
     "O dataset contém mais de **13.000 imagens**, sendo **1680 das pessoas retratadas têm duas ou mais fotos distintas** no conjunto de dados.\n",
     "\n",
     "![thumb-site-2.png](attachment:09f828b9-095d-4923-bb26-b3b6e5f1c065.png) <br>\n",
     "<small>(Fonte: capturado de __[LFW](https://vis-www.cs.umass.edu/lfw/)__ em 1/5/24)</small>\n",
     "\n",
-    "Existem quatro conjuntos diferentes de imagens do LFW: o original e três tipos diferentes de imagens \"alinhadas\". Imagens alinhadas são todas aquelas do conjunto original que foram ajustadas (rotação) para que o rosto fique \"em pé\". \n",
+    "Há quatro conjuntos diferentes de imagens do LFW: o original e três tipos diferentes de imagens \"alinhadas\". Imagens alinhadas são todas aquelas do conjunto original que foram ajustadas (rotação) para que o rosto fique \"em pé\". \n",
     "\n",
     "![thumb-site-3.png](attachment:41cbab04-0f07-4399-b407-9c71ee588e0a.png) <br>\n",
     "<small>(Fonte: capturado de __[LFW](https://vis-www.cs.umass.edu/lfw/)__ em 1/5/24)</small>\n",
@@ -63,7 +63,7 @@
    "source": [
     "from sklearn.datasets import fetch_lfw_people\n",
     "lfw_people = fetch_lfw_people(min_faces_per_person=70, resize=0.4)\n",
-    "for name in lfw_people.target_names[:5]:\n",
+    "for name in lfw_people.target_names:\n",
     "    print(name)"
    ]
   },
@@ -74,6 +74,7 @@
    "source": [
     "<br>\n",
     "Então fazemos um levantamento das caracteristicas do dadaset estabelecido:<br>\n",
+    "\n",
     "**n_samples**: número de imagens<br>\n",
     "**h**: altura das imagens redimensionadas<br>\n",
     "**w**: largura das imagens redimensionadas"
@@ -116,7 +117,7 @@
    "id": "9ce9b0b1-fb2a-4ef2-8b7b-4e206f78ba95",
    "metadata": {},
    "source": [
-    "<br>A etiqueta (label) que será previsto (predicted) é o ID da pessoa. As classes já são disponibilizadas pelo scikit-learn com o array *lfw_people.target*"
+    "<br>A etiqueta (label) que será prevista (predicted) é o ID da pessoa. As classes já são disponibilizadas pelo scikit-learn com o array *lfw_people.target*"
    ]
   },
   {
@@ -307,6 +308,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85eea14d-3334-4f92-9de1-006047cf42b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(X_train_pca),len(X_test_pca)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "4ada5b15-01bd-481b-af2c-8a9c6c5b1db2",
    "metadata": {},
@@ -320,7 +331,7 @@
    "metadata": {},
    "source": [
     "### Treinamento\n",
-    "Neste exemplo é produzido um modelo de classificador __[SVM (Support Vector Machines)](https://scikit-learn.org/stable/modules/svm.html)__. Ele também pode ser utilizado para regressão e detectção de outliners. O código emprega o kernel RBF com os prâmetros *C* e *gamma* com funções com uma função de distribuição log-uniforme. Um valor alto para *C* tem como objetivo classificar todos os exemplos corretamente. Um valor maior para *gama* indica que exemplos próximos devem ser afetados / considerados. Uma variação dos *hiperparâmetros* é realizada para identificar o melhor valor."
+    "Neste exemplo é produzido um modelo de classificador __[SVM (Support Vector Machines)](https://scikit-learn.org/stable/modules/svm.html)__. Ele também pode ser utilizado para regressão e detecção de outliners. O código emprega o kernel RBF com os prâmetros *C* e *gamma* com funções com uma função de distribuição log-uniforme. Um valor alto para *C* tem como objetivo classificar todos os exemplos corretamente. Um valor maior para *gama* indica que exemplos próximos devem ser afetados / considerados. Uma variação dos *hiperparâmetros* é realizada para identificar o melhor valor."
    ]
   },
   {
