--- a/face-recognition.ipynb
+++ b/face-recognition.ipynb
@@ -51,7 +51,7 @@
    "id": "7b277f49-d379-4d41-b05e-bfb9e2311090",
    "metadata": {},
    "source": [
-    "Carrega imagens de pessoas com pelo menos 70 imagens (considerando todos os conjuntos) e as redimensiona com uma taxa de 0,4."
+    "Sendo assim temos um código que carrega imagens de pessoas com pelo menos 70 imagens (considerando todos os conjuntos) e as redimensiona com uma taxa de 0,4."
    ]
   },
   {
