--- a/face-recognition.ipynb
+++ b/face-recognition.ipynb
@@ -232,7 +232,7 @@
    "metadata": {},
    "source": [
     "### PCA - Eigenfaces\n",
-    "Com base nos exemplos de treinamento o método não supervisionado Análise de Componentes Principais (sigla em inglês PCA) __[pca.components_.reshape](https://scikit-learn.org/stable/modules/generated/sklearn.decomposition.PCA.html)__ extraí 150 atributos (dos até então 1850), que representam a extração de um padrão para identificar o espaço em que o rosto se encontra. Este é um processo de redução de dimensionalidade, e gera um novo dataset com apenas 150 atributos, transformando os dados dos exemplos do conjunto X_train e X_test em X_train_pca e X_teste_pca, respectivamente."
+    "Com base nos exemplos de treinamento o método não supervisionado de Análise de Componentes Principais (sigla em inglês PCA) com __[pca.components_.reshape](https://scikit-learn.org/stable/modules/generated/sklearn.decomposition.PCA.html)__ são extraídos 150 atributos (dos até então 1850), que representam a extração de um padrão para identificar o espaço em que o rosto se encontra. Este é um processo de redução de dimensionalidade, e gera um novo dataset com apenas 150 atributos, transformando os dados dos exemplos do conjunto X_train e X_test em X_train_pca e X_teste_pca, respectivamente."
    ]
   },
   {
