--- a/viagem.ipynb
+++ b/viagem.ipynb
@@ -1204,7 +1204,7 @@
     "**Precisão**: tp / (tp + fp), ou seja, proporção dos acertos em classificar exemplos positivos <br>\n",
     "**Recall**: tp / (tp + fn), ou seja, proporção de acertos entre todas as classes<br>\n",
     "**f1-score**: média harmônica entre a Precisão e o Recall<br>\n",
-    "**Acurácia**: soma do tp de todas as classes dividido pelo número de instâncias do dataset de teste (resulta em uma percentagem).<br>\n",
+    "**Acurácia**: soma do tp com tf dividido pelo número de instâncias do dataset de teste (resulta em uma percentagem).<br>\n",
     "\n",
     "Uma ótima imagem ilustrativa sobre estas métricas pode ser encontrada na __[Wikipédia](https://pt.wikipedia.org/wiki/Precis%C3%A3o_e_revoca%C3%A7%C3%A3o#/media/Ficheiro:Precis%C3%A3o_e_revoca%C3%A7%C3%A3o.png)__\n"
    ]
